# AgentSwitch

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: app.rs  diagnostics.rs  editor.rs  hook_diag.rs  main.rs  scanner.rs  toggler.rs  types.rs
src/ui/: diff_panel.rs  editor_panel.rs  hooks_panel.rs  item_list.rs  mod.rs  sidebar.rs  status_bar.rs  theme.rs
