[package]
name = "agent-switch"
version = "0.1.0"
edition = "2021"
description = "Unified AI agent configuration manager"

[dependencies]
eframe = "0.31"
egui = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
anyhow = "1"
dirs = "6"
rfd = "0.15"

[profile.release]
opt-level = "z"
lto = true
strip = true
